# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2018 Intel Corporation

if is_windows
    subdir_done()
endif

drivers = [
        'isal',
        'mlx5',
        'nitrox',
        'octeontx',
        'uadk',
        'zlib',
]

std_deps = ['compressdev'] # compressdev pulls in all other needed deps
