# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

if is_windows
    subdir_done()
endif

drivers = [
        'cnxk',
        'dlb2',
        'dpaa',
        'dpaa2',
        'dsw',
        'octeontx',
        'opdl',
        'skeleton',
        'sw',
]
std_deps = ['eventdev', 'kvargs']
